# diplox-bot

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
deploy/: diplox-bot.service
src/diplox/: __main__.py  config.py
src/diplox/bot/: formatters.py  keyboards.py  main.py  states.py
src/diplox/bot/handlers/: ask.py  chat.py  do.py  document.py  menu.py  notes.py  process.py  start.py  text.py  tools.py  voice.py
src/diplox/services/: database.py  diplox_api.py  document.py  llm.py  search.py  session.py  storage.py  transcription.py  user_context.py
src/diplox/web/: app.py
src/diplox/web/static/: index.html  style.css
